--- a/.env.sample
+++ b/.env.sample
@@ -10,9 +10,12 @@ clientId="clientId(ApplicationId)"
 // status("./status/{files}")
 
 guild="Your guild id"
-days="voice channel Id"
+days="change voice channel Id" ※
+member="change voice channel Id" ※
 
 // logs("./logs/{files}")
 
 lobby="log send text channel"
 voice="log send text channel"
+
+※ 同じチャンネルにするとエラーが発生します。
